--- a/day01_fancy_buttons/index.html
+++ b/day01_fancy_buttons/index.html
@@ -14,7 +14,7 @@
       <h2>Facebook Style Button</h2>
       <div class="button-container">
         <button class="fb-style-btn fb-style-dark">Dark</button>
-        <button class="fb-style-btn">Light</button>
+        <button class="fb-style-btn fb-style-light">Light</button>
       </div>
     </div>
     <div class="flex-item">
