--- a/day01_fancy_buttons/index.html
+++ b/day01_fancy_buttons/index.html
@@ -18,10 +18,10 @@
       </div>
     </div>
     <div class="flex-item">
-      <h2>Facebook Style Button</h2>
+      <h2>3D Style Button</h2>
       <div class="button-container">
-        <button>Dark</button>
-        <button>Light</button>
+        <button class="btn-3D-1">3D Button 1</button>
+        <button class="btn-3D-2">Circle</button>
       </div>
     </div>
     <div class="flex-item">
