--- a/day01_fancy_buttons/index.html
+++ b/day01_fancy_buttons/index.html
@@ -25,17 +25,17 @@
       </div>
     </div>
     <div class="flex-item">
-      <h2>Facebook Style Button</h2>
+      <h2>Gradient Bordered Buttons</h2>
       <div class="button-container">
-        <button>Dark</button>
-        <button>Light</button>
+        <button class="gradient-btn-1">Gradient Button 1</button>
+        <button class="gradient-btn-2">Gradient Button 2</button>
       </div>
     </div>
     <div class="flex-item">
-      <h2>Facebook Style Button</h2>
+      <h2>Animated Buttons</h2>
       <div class="button-container">
-        <button>Dark</button>
-        <button>Light</button>
+        <button class="animated-btn-1">Animated Button 1</button>
+        <button class="animated-btn-2">Animated Button 2</button>
       </div>
     </div>
     <div class="flex-item">
