toggle button 1 update

--- a/day01_fancy_buttons/index.html
+++ b/day01_fancy_buttons/index.html
@@ -39,26 +39,20 @@
       </div>
     </div>
     <div class="flex-item">
-      <h2>Facebook Style Button</h2>
+      <h2>Toogle Switch UI Buttons</h2>
       <div class="button-container">
-        <button >Dark</button>
-        <button>Light</button>
+        <label for="toggle1" class="toggle-1">
+          <input type="checkbox" id="toggle1" class="toggle-1_input">
+          <span class="toggle-1_button"></span>
+        </label>
+        <label for="toggle2" class="toggle-2">
+          <input type="checkbox" id="toggle2" class="toggle-2_input">
+          <span class="toggle-2_button">Click me to activate</span>
+        </label>
+        <button>Toogle Button 3</button>
       </div>
     </div>
-    <div class="flex-item">
-      <h2>Facebook Style Button</h2>
-      <div class="button-container">
-        <button>Dark</button>
-        <button>Light</button>
-      </div>
-    </div>
-    <div class="flex-item">
-      <h2>Facebook Style Button</h2>
-      <div class="button-container">
-        <button>Dark</button>
-        <button>Light</button>
-      </div>
-    </div>
+    
   </div>
 </body>
 </html>
