shadow type update

--- a/day02_sexy_typography/index.html
+++ b/day02_sexy_typography/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Sexy Typography</title>
   <link rel="stylesheet" href="./style.css">
+  <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="container">
@@ -13,7 +14,7 @@
       <h2 class="shadow-typo">Cool Shadow</h2>
     </section>
     <section>
-      <h2 class="3D-typo">3D Typo</h2>
+      <h2 class="threedee-typo">3D Type</h2>
     </section>
   </div>
 </body>
