--- a/day03_clipping_images/index.html
+++ b/day03_clipping_images/index.html
@@ -9,6 +9,10 @@
   <link href="https://fonts.googleapis.com/css?family=Baskervville|Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
+  <div class="container">
+    
+
+  </div>
   
 </body>
 </html>
