complete 1st clip path

--- a/day03_clipping_images/index.html
+++ b/day03_clipping_images/index.html
@@ -10,9 +10,23 @@
 </head>
 <body>
   <div class="container">
-    
-
+    <section>
+      <h4>Example#1</h4>
+      <img src="./assets/solar-flare.jpeg" alt="" width="300px" height="300px" class="clip-image-1">
+    </section>
+    <section>
+      <h4>Example#2</h4>
+      <img src="./assets/galaxy.jpeg" alt="" width="300px" height="300px" class="clip-image-2">
+    </section>
+    <section>
+      <h4>Example#3</h4>
+      <img src="./assets/jar.jpeg" alt="" width="300px" height="300px" class="clip-image-3">
+    </section>
+    <section>
+      <h4>Example#4</h4>
+      <img src="./assets/time-lapse.jpeg" alt="" width="300px" height="300px" class="clip-image-4">
+    </section>
   </div>
-  
+
 </body>
 </html>
