--- a/day04_sexy_reg_form/index.html
+++ b/day04_sexy_reg_form/index.html
@@ -17,7 +17,7 @@
           <h3 class="register-title">Create an account</h3>
           <p>Quickly &amp; easily create an account using the form below</p>
           <form action="">
-            <input type="email" name="" id="" placeholder="Enter your email">
+            <input type="email" name="" id="" placeholder="Enter your email"><br>
             <input type="password" name="" id=""placeholder="Enter your password">
             <input type="submit" value="Create my account">
           </form>
