--- a/day05_useful_broken_image/index.html
+++ b/day05_useful_broken_image/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Usefull Broken Images</title>
+  <title>Useful Broken Images</title>
   <link rel="stylesheet" href="./style.css">
   <link href="https://fonts.googleapis.com/css?family=Baskervville|Roboto&display=swap" rel="stylesheet">
 
