--- a/9 - Modern Layouts/index.html
+++ b/9 - Modern Layouts/index.html
@@ -12,7 +12,7 @@
   <head>
     <meta charset="utf-8">
     <title>Modern Layouts | Code 30 Things in 30 Days with CSS3</title>
-
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <!-- NORMALIZE CSS -->
     <link rel="stylesheet" href="../_theme-styles/normalize.css">
 
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="final.css">
 
     <!-- SANDBOX CSS (this is your file!) -->
-    <link rel="stylesheet" href="sandbox.css">
+    <link rel="stylesheet" href="./sandbox.css">
 
 <link href="https://fonts.googleapis.com/css?family=Bubblegum+Sans|Nova+Mono|Roboto+Condensed" rel="stylesheet">
   </head>
