--- a/10 - Pricing Table/index.html
+++ b/10 - Pricing Table/index.html
@@ -12,7 +12,7 @@
   <head>
     <meta charset="utf-8">
     <title>Pricing Table | Code 30 Things in 30 Days with CSS3</title>
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- NORMALIZE CSS -->
     <link rel="stylesheet" href="../_theme-styles/normalize.css">
 
