--- a/11 - IE Hacks/index.html
+++ b/11 - IE Hacks/index.html
@@ -12,7 +12,7 @@
   <head>
     <meta charset="utf-8">
     <title>Internet Explorer Hacks | Code 30 Things in 30 Days with CSS3</title>
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- NORMALIZE CSS -->
     <link rel="stylesheet" href="../_theme-styles/normalize.css">
 
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="sandbox.css">
 
 <link href="https://fonts.googleapis.com/css?family=Bubblegum+Sans|Nova+Mono|Roboto+Condensed" rel="stylesheet">
+<!--[if  lte IE 9]> <link rel="stylesheet" href="./ie.css"> <![endif]-->
   </head>
   <body>
     <h1><small>Day #11</small> Internet Explorer Hacks</h1>
